// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`page initRouteMeta 1`] = `
{
  "id": 1,
  "navigationBar": {
    "titleText": "uni-app",
  },
  "pullToRefresh": {},
  "route": "",
}
`;

exports[`page initRouteMeta 2`] = `
{
  "enablePullDownRefresh": true,
  "id": 1,
  "navigationBar": {
    "titleColor": "#000000",
    "titleText": "hello",
  },
  "pullToRefresh": {},
  "route": "",
}
`;

exports[`page initRouteMeta 3`] = `
{
  "enablePullDownRefresh": true,
  "id": 1,
  "navigationBar": {
    "titleColor": "#000000",
    "titleText": "uni-app",
  },
  "pullToRefresh": {
    "offset": 100,
  },
  "route": "",
}
`;
